Fixed spacing between small and large widgets

--- a/frontend/src/app/home/main-page/main-page.component.scss
+++ b/frontend/src/app/home/main-page/main-page.component.scss
@@ -76,6 +76,7 @@ div {
 .large-widgets {
   width: 60vw;
   display: block;
+  margin-left: 1vw;
 }
 
 .title-bar {
@@ -97,9 +98,9 @@ div {
 
 .small-widgets {
   display: block;
-  width: 12vw;
+  width: 15vw;
   margin-left: 1vw;
-  margin-right: 0.5vw;
+  margin-right: 1vw;
 }
 
 .scroll-lock {
