--- a/frontend/src/app/widget/small-widget/small-widget.component.scss
+++ b/frontend/src/app/widget/small-widget/small-widget.component.scss
@@ -4,14 +4,13 @@
   background-color: white;
   color: $teal;
   padding: 1em;
-  min-width: 15em;
+  min-width: 20em;
   border-radius: 25px;
   text-align: center;
   box-shadow: 2px 2px 5px $light-gray;
   display: flex;
   margin-bottom: 2em;
   width: 15vw;
-  max-width: 100% !important;
   padding-bottom: 2em;
 }
 
